--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,4 +75,4 @@ jobs:
 
       - name: Running tests
         run: |
-          python -m unittest discover -s tests/ -p test_*.py
+          pipenv run test
