Includes linting in CI workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,3 +76,7 @@ jobs:
       - name: Running tests
         run: |
           pipenv run test
+
+      - name: Running lint
+        run: |
+          pipenv run lint
